--- a/scss/component/_template.scss
+++ b/scss/component/_template.scss
@@ -33,6 +33,12 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+h1.hero {
+  text-align: center;
+  font-size: 4em;
+  text-shadow: 1px 1px 1px black;
+}
+
 table {
   padding-bottom: 1em;
 }
@@ -866,6 +872,10 @@ body > div.container-max-width > div.dialog-off-canvas-main-canvas > div > div >
 }
 
 @media (max-width: 767.98px) {
+  .region-content h1.page-header {
+    font-size: 2.5em;
+    border-bottom: none;
+  }
   .region-content table {
     display: block;
     overflow-x: auto;
@@ -1491,6 +1501,9 @@ form .panel-body {
 
 @media (max-width: 767.98px) {
   .region-content form {
+    max-width: 100%;
+  }
+  input#fieldEmail {
     max-width: 100%;
   }
 }
